syntax = "proto3";

package proto;

option go_package = "worker/v1;workerv1";
option java_multiple_files = true;

service WorkerService {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc Submit(SubmitRequest) returns (SubmitResponse);
}

// AppendEntries RPCリクエスト
message AppendEntriesRequest {
  int32             term         = 1;
  int32             leaderId     = 2;
  int32             prevLogIndex = 3;
  int32             prevLogTerm  = 4;
  repeated LogEntry entries      = 5;
}

// AppendEntries RPCレスポンス
message AppendEntriesResponse {
  int32 term          = 1;
  bool  success       = 2;
  int32 conflictIndex = 3;
  int32 conflictTerm  = 4;
}

// RequestVote RPCリクエスト
message RequestVoteRequest {
  int32 term         = 1;
  int32 candidateId  = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm  = 4;
}

// RequestVote RPCレスポンス
message RequestVoteResponse {
  int32 term        = 1;
  bool  voteGranted = 2;
}

// ログエントリ
message LogEntry {
  int32  term    = 1;
  int32  index   = 2;
  string command = 3;
}

message SubmitRequest {
  string command = 1;
}

message SubmitResponse {
  bool   success = 1;
  string address = 2;
}
